--- a/index.html
+++ b/index.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>your local time</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Local Time</title>
+  <style>
+    /* Global Reset & Font */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    }
 
-    <style>
-        body{
-            background-color: #212121;
-            color: #fff;
-        }
+    body {
+      background: linear-gradient(135deg, #1f1f1f, #2c2c2c);
+      color: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
+    }
 
-        .center{
-            display: flex;
-            height: 100vh;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
+    .center {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      align-items: center;
+    }
 
-        #banner{
-            font-size: 2rem;
-            text-transform: capitalize;
-        }
+    #banner {
+      font-size: 2.2rem;
+      font-weight: 600;
+      text-transform: capitalize;
+      letter-spacing: 1px;
+    }
 
-        #clock{
-            font-size: 40px;
-            background-color: orange;
-            padding: 20px 50px;
-            margin-top: 10px;
-            border-radius: 10px;
+    #clock {
+      font-size: 2.5rem;
+      background: #ff9800;
+      padding: 20px 60px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
 
-        }
-    </style>
+    #clock:hover {
+      background: #e68900;
+    }
+  </style>
 </head>
 <body>
-    
-    <div class="center">
-        <div id="banner"> <span> your local time</span></div>
-        <div id="clock"></div>
-    </div>
+  <div class="center">
+    <div id="banner">Your Local Time</div>
+    <div id="clock"></div>
+  </div>
 
 
-
-
-    <script src="clock.js"></script>
+  <script src="clock.js"></script>
 </body>
 </html>
