--- a/JS Project/index.html
+++ b/JS Project/index.html
@@ -130,6 +130,45 @@
       background: linear-gradient(135deg, #1976d2, #0d47a1);
       transform: scale(1.05);
     }
+
+
+      @media (max-width: 600px) {
+      #wrapper {
+        padding: 1.5rem;
+      }
+
+      #wrapper h1 {
+        font-size: 1.5rem;
+      }
+
+      form label {
+        font-size: 1rem;
+      }
+
+      .guessField {
+        font-size: 0.95rem;
+      }
+
+      .guessSubmit, 
+      .button button {
+        font-size: 0.9rem;
+        padding: 0.6rem 1.2rem;
+      }
+    }
+
+    @media (max-width: 400px) {
+      #wrapper {
+        padding: 1rem;
+      }
+
+      #wrapper h1 {
+        font-size: 1.3rem;
+      }
+
+      form label {
+        font-size: 0.9rem;
+      }
+    }
   </style>
 </head>
 <body>
